plugins {
    id 'java'
}

sourceCompatibility = 14
targetCompatibility = 14

group 'org.example'
version '1.0-SNAPSHOT'

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile("org.junit.jupiter:junit-jupiter-engine:5.6.2")
}
